kubernetes/celery-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker-deployment
  labels:
    app: celery-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: celery-worker
  template:
    metadata:
      labels:
        app: celery-worker
    spec:
      containers:
        - image: registry.gitlab.com/django26/django-boilerplate:latest
          name: celery-worker
          command:
            - "celery"
            - "-A"
            - "app.celery.app"
            - "worker"
            - "-l"
            - "INFO"
      imagePullSecrets:
        - name: gitlab-registry-secret
