kubernetes/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-boilerplate-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-boilerplate-redis
  template:
    metadata:
      labels:
        app: django-boilerplate-redis
    spec:
      containers:
      - name: redis
        image: redis:latest
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: django-boilerplate-redis-service
spec:
  selector:
    app: django-boilerplate-redis
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
