kubernetes/django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
  labels:
    app: django
spec:
  replicas: 5
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
        - image: registry.gitlab.com/django26/django-boilerplate:latest
          imagePullPolicy: Always
          name: django
          command:
            - /usr/src/start.sh
          ports:
            - containerPort: 8000
#          livenessProbe:
#            httpGet:
#              path: /health/
#              port: 8000
#            initialDelaySeconds: 30
#            periodSeconds: 30
#          readinessProbe:
#            httpGet:
#              path: /
#              port: 8000
#            initialDelaySeconds: 5
#            periodSeconds: 5
      imagePullSecrets:
        - name: gitlab-registry-secret
---
apiVersion: v1
kind: Service
metadata:
  name: django-service
  labels:
    app: django
spec:
  type: ClusterIP
  selector:
    app: django
  ports:
    - port: 8000
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - k8s.ondrados.com
    secretName: django-tls
  rules:
    - host: k8s.ondrados.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: django-service
              port:
                number: 8000
