kubernetes/echo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-deployment
  labels:
    app: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
      - name: echo
        image: hashicorp/http-echo
        args:
        - "-text=Hello from http-echo!"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: echo-service
  labels:
    app: echo
spec:
  type: ClusterIP
  selector:
    app: echo
  ports:
    - port: 5678
      targetPort: 5678
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - echo.k8s.ondrados.com
    secretName: echo-tls
  rules:
    - host: echo.k8s.ondrados.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: echo-service
              port:
                number: 5678
